订单详情增加套餐

--- a/app/src/main/res/layout/activity_goods_order_pay_call_back.xml
+++ b/app/src/main/res/layout/activity_goods_order_pay_call_back.xml
@@ -55,53 +55,46 @@
             android:id="@+id/iv_pay_bg"
             android:layout_width="@dimen/dimen_120dp"
             android:layout_height="@dimen/dimen_120dp"
-            android:layout_centerInParent="true"
-            android:src="@drawable/zhy_pay_fail_bg" />
+            android:layout_centerInParent="true" />
 
         <ImageView
             android:id="@+id/iv_pay_icon"
             android:layout_width="@dimen/dimen_40dp"
             android:layout_height="@dimen/dimen_40dp"
-            android:layout_centerInParent="true"
-            android:src="@drawable/zhy_pay_fail_icon" />
+            android:layout_centerInParent="true" />
 
         <ImageView
             android:id="@+id/iv_pay_other_1"
             android:layout_width="@dimen/dimen_15dp"
-            android:layout_height="@dimen/dimen_15dp"
-            android:src="@drawable/zhy_pay_fail_other_icon_2" />
+            android:layout_height="@dimen/dimen_15dp" />
 
         <ImageView
             android:id="@+id/iv_pay_other_2"
             android:layout_width="@dimen/dimen_20dp"
             android:layout_height="@dimen/dimen_20dp"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="@dimen/dimen_4dp"
-            android:src="@drawable/zhy_pay_fail_other_icon_1" />
+            android:layout_marginRight="@dimen/dimen_4dp"/>
 
         <ImageView
             android:id="@+id/iv_pay_other_3"
             android:layout_width="@dimen/dimen_18dp"
             android:layout_height="@dimen/dimen_18dp"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/zhy_pay_fail_other_icon_2" />
+            android:layout_alignParentRight="true" />
 
         <ImageView
             android:id="@+id/iv_pay_other_4"
             android:layout_width="@dimen/dimen_15dp"
             android:layout_height="@dimen/dimen_15dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="@dimen/dimen_5dp"
-            android:src="@drawable/zhy_pay_fail_other_icon_1" />
+            android:layout_marginBottom="@dimen/dimen_5dp" />
 
         <ImageView
             android:id="@+id/iv_pay_other_5"
             android:layout_width="@dimen/dimen_10dp"
             android:layout_height="@dimen/dimen_10dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginLeft="@dimen/dimen_20dp"
-            android:src="@drawable/zhy_pay_fail_other_icon_2" />
+            android:layout_marginLeft="@dimen/dimen_20dp" />
     </RelativeLayout>
 
 
