--- a/app/src/main/res/layout/layout_goods_spec_select_dialog.xml
+++ b/app/src/main/res/layout/layout_goods_spec_select_dialog.xml
@@ -2,15 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:background="@color/white"
+    android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/tv_test"
-        android:layout_width="match_parent"
+        android:id="@+id/tv_goods_spec_select_name"
+        android:layout_width="wrap_content"
         android:layout_height="@dimen/dimen_100dp"
-        android:background="@drawable/zhy_submit_button_style_1"
-        android:gravity="center"
-        android:text="确定"
-        android:textColor="@color/white"
-        android:textSize="@dimen/dimen_32dp" />
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="@dimen/dimen_16dp"
+        android:layout_weight="1"
+        android:gravity="center_vertical"
+        android:text="请选择 产品型号"
+        android:textColor="@color/zhy_text_color_16"
+        android:textSize="@dimen/dimen_28dp" />
+
+    <TextView
+        android:id="@+id/tv_good_sprice_select"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginRight="@dimen/dimen_16dp"
+        android:gravity="center_vertical"
+        android:textColor="@color/zhy_text_color_16"
+        android:textSize="@dimen/dimen_28dp" />
 </LinearLayout>
