--- a/app/src/main/res/layout/view_good_number_change.xml
+++ b/app/src/main/res/layout/view_good_number_change.xml
@@ -36,7 +36,8 @@
         android:paddingRight="@dimen/dimen_16dp"
         android:singleLine="true"
         android:textColor="@color/zhy_text_color_16"
-        android:textSize="@dimen/dimen_28dp" />
+        android:textSize="@dimen/dimen_28dp"
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="@dimen/dimen_1dp"
