--- a/app/src/main/res/drawable/zhy_goods_number_change_bg.xml
+++ b/app/src/main/res/drawable/zhy_goods_number_change_bg.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="@dimen/dimen_5dp"></corners>
-    <stroke
-        android:width="@dimen/dimen_1dp"
-        android:color="@color/gray_text"></stroke>
+    <corners android:radius="@dimen/dimen_10dp"></corners>
+    <solid android:color="@color/zhy_backgroud_1"></solid>
 
 </shape>
