--- a/app/src/main/res/layout/dialog_goods_select.xml
+++ b/app/src/main/res/layout/dialog_goods_select.xml
@@ -84,6 +84,36 @@
                 </com.shian.shianlife.view.taglayout.TagLayout>
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/ll_package_goods_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginBottom="@dimen/dimen_30dp"
+                android:paddingLeft="@dimen/dimen_32dp"
+                android:visibility="gone">
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dimen_1dp"
+                    android:background="@color/zhy_line_3" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/dimen_16dp"
+                    android:layout_marginTop="@dimen/dimen_16dp"
+                    android:text="套餐商品"
+                    android:textColor="@color/zhy_text_color_16"
+                    android:textSize="@dimen/dimen_28dp" />
+
+                <com.shian.shianlife.view.ScrollRecyclerView
+                    android:id="@+id/package_goods_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"></com.shian.shianlife.view.ScrollRecyclerView>
+            </LinearLayout>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_1dp"
