--- a/app/src/main/res/layout/item_goods_package.xml
+++ b/app/src/main/res/layout/item_goods_package.xml
@@ -35,8 +35,29 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/dimen_12dp"
             android:gravity="center_horizontal"
-            android:text="放"
+            android:maxEms="5"
+            android:text=""
             android:textColor="@color/zhy_text_color_16"
+            android:textSize="@dimen/dimen_24dp" />
+
+        <TextView
+            android:id="@+id/tv_spec_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:maxEms="5"
+            android:textColor="@color/zhy_text_color_16"
+            android:textSize="@dimen/dimen_24dp" />
+
+        <TextView
+            android:id="@+id/tv_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:text=""
+            android:textColor="@color/zhy_text_color_13"
             android:textSize="@dimen/dimen_24dp" />
     </LinearLayout>
 </LinearLayout>
