--- a/app/src/main/res/layout/activity_goods_details.xml
+++ b/app/src/main/res/layout/activity_goods_details.xml
@@ -91,7 +91,7 @@
             android:src="@drawable/ic_share" />
     </RelativeLayout>
 
-    <include layout="@layout/layout_goods_details_buttons"></include>
+    <include layout="@layout/layout_goods_details_buttons" android:visibility="gone"></include>
 
 
 </android.support.design.widget.CoordinatorLayout>
