--- a/app/src/main/res/layout/fragment_shoppingcart.xml
+++ b/app/src/main/res/layout/fragment_shoppingcart.xml
@@ -10,11 +10,6 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"></com.shian.shianlife.view.listview.GoodsShoppingCartListView>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_1dp"
-        android:background="@color/zhy_backgroud_1" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_96dp"
@@ -64,6 +59,7 @@
 
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/tv_submit"
             android:layout_width="@dimen/dimen_250dp"
             android:layout_height="match_parent"
@@ -73,4 +69,10 @@
             android:textColor="@color/white"
             android:textSize="@dimen/dimen_28dp" />
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_1dp"
+        android:background="@color/zhy_backgroud_1" />
+
 </LinearLayout>
