--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -123,7 +123,7 @@
                     android:layout_gravity="right"
                     android:layout_weight="1"
                     android:buttonTint="@color/zhy_text_color_2"
-                    android:text="自动登陆"
+                    android:text="自动登录"
                     android:textColor="@color/zhy_text_color_2"
 
                     android:textSize="@dimen/dimen_24dp" />
